# Crypto_Note_V2

./: CMakeLists.txt  HomePage.qml  LoginPage.qml  Main.qml  RegisterPage.qml  ResoursesIMG.qrc  SaveLoginPage.qml  main.cpp  profil.cpp  profil.h  user.cpp  user.h
